finished speed and size sliders

--- a/index.html
+++ b/index.html
@@ -20,15 +20,21 @@
     <a class="head_title sort bub_sort">Bubble Sort</a>
     <a class="head_title sort mer_sort">Merge Sort</a>
     <a class="head_title sort sel_sort">Selection Sort</a>
-    <div>
-      <input type="range" min="1" max="10" value="5" class="slider" id="myRange">
-      <input type="range" min="1" max="100" value="50" class="slider" id="myRange">
+    <a class="head_title sort sel_sort">Quick Sort</a>
+    <div class="sliders">
+      <div class="slider_container">
+        <span class="slider_text">Speed</span>
+        <input type="range" min="1" max="5" value="3" class="slider speed">
+      </div>
+      <div class="slider_container">
+        <span class="slider_text">Size</span>
+        <input type="range" min="1" max="5" value="3" class="slider size">
+      </div>
     </div>
 
   </header>
   <p class="input_msg">Click generate array to begin!
   </p>
-  <div class="divider"></div>
   <div class="arr_container">
     <!-- <div class="bar" style="--bar-value:85%;" data="85"><span class="data">85</span></div>
     <div class="bar" style="--bar-value:23%;" data="23"><span class="data">23</span></div>
