Updated Bubble Sort

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     </div>
 
   </header>
-  <p class="input_msg">Click generate array to begin!
+  <p class="input_msg">Adjust speed and size, then click generate array to begin!
   </p>
   <div class="arr_container">
     <!-- <div class="bar" style="--bar-value:85%;" data="85"><span class="data">85</span></div>
