Added comments and organized code

--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
     <h1>VisualSort</h1>
     <a class="head_title gen_arr">Generate Array</a>
     <a class="head_title sort bub_sort">Bubble Sort</a>
-    <a class="head_title sort mer_sort">Merge Sort</a>
     <a class="head_title sort sel_sort">Selection Sort</a>
-    <a class="head_title sort sel_sort">Quick Sort</a>
+    <a class="head_title sort mer_sort">Merge Sort</a>
+    <a class="head_title sort quick_sort">Quick Sort</a>
     <div class="sliders">
       <div class="slider_container">
         <span class="slider_text">Speed</span>
